--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "NODE_ENV=test jest",
     "test:coverage": "yarn test -- --coverage",
     "test:watch": "yarn test -- --watch",
-    "test:watch:coverage": "yarn test:coverage -- --watch"
+    "test:watch:coverage": "yarn test:coverage -- --watch",
+    "prepublish": "npm run dist"
   },
   "devDependencies": {
     "@kadira/storybook": "^2.35.3",
