Move src dirs to root
Instead of a "src" directory, why not just build both web and native resources in place.

--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,8 @@ node_modules
 coverage
 
 # production
-build
-dist
-native
-storybook-static
-package/*
+web/*.js
+native/*.js
 
 # misc
 .DS_Store
