--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
     "strict": false,
     "lib": ["es6"],
     "outDir": "./",
-    "declarationDir": "./",
     "module": "es2015",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
@@ -12,10 +11,11 @@
     "jsx": "react",
     "allowJs": false
   },
-  "typeRoots" : ["./@types", "./node_modules"],
   "include": [
-    "src/**/*"
+    "web/**/*",
+    "native/**/*"
   ],
+  "typeRoots": ["./typings", "./node_modules"],
   "exclude": [
     "node_modules",
     "**/*.spec.ts"
