--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "@types/react-native": "^0.49.5",
-    "case-sensitive-paths-webpack-plugin": "^1.1.4",
+    "loki": "^0.7.0",
     "npm-run-all": "^4.1.1",
     "react": "^16.0.0",
     "ts-loader": "^3.1.1",
