Add apps for loki visual regression tests

--- a/package.json
+++ b/package.json
@@ -12,13 +12,21 @@
     "dist": "webpack --progress --profile --colors --env=prod",
     "dist:watch": "npm run dist -- -w",
     "prepare": "npm run dist",
-    "example-app-native": "cd example-app-native && npm start",
-    "example-app-web": "cd example-app-web && npm start",
-    "example-apps": "run-p dist:watch example-app-native example-app-web"
+    "native:run": "cd native-test && run-p storybook ios",
+    "native:install": "cd native-test && npm install",
+    "native:test": "cd native-test && npm run loki:test",
+    "native:update": "cd native-test && npm run loki:update",
+    "web:run": "cd web-test && npm run storybook",
+    "web:install": "cd web-test && npm install",
+    "web:test": "cd web-test && npm run loki:test",
+    "web:update": "cd web-test && npm run loki:update",
+    "apps:run": "run-p dist:watch native:run web:run",
+    "apps:install": "run-p native:install web:install",
+    "apps:test": "run-p native:test web:test",
+    "apps:update": "run-p native:update web:update"
   },
   "devDependencies": {
     "@types/react-native": "^0.49.5",
-    "loki": "^0.7.0",
     "npm-run-all": "^4.1.1",
     "react": "^16.0.0",
     "ts-loader": "^3.1.1",
