--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-layout-views",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "main": "./web/index.js",
   "types": "./web/index.d.ts",
   "license": "MIT",
@@ -36,7 +36,8 @@
   },
   "dependencies": {
     "css-length": "^1.0.3",
-    "styled-components": "^2.2.3"
+    "styled-components": "^2.2.3",
+    "to-style": "^1.3.3"
   },
   "peerDependencies": {
     "react": "*"
