--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,22 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "strict": false,
-    "lib": ["es6"],
+    "strict": true,
+    "lib": [
+      "es6"
+    ],
     "outDir": "./",
     "module": "es2015",
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
     "target": "es5",
     "jsx": "react",
     "allowJs": false
   },
   "include": [
-    "web/**/*",
-    "native/**/*"
+    "typings",
+    "native",
+    "web"
   ],
-  "typeRoots": ["./typings", "./node_modules"],
   "exclude": [
     "node_modules",
     "**/*.spec.ts"
