--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-layout-views",
-  "version": "0.4.0-beta.3",
+  "version": "0.4.0",
   "main": "./web/index.js",
   "types": "./web/index.d.ts",
   "license": "MIT",
