--- a/package.json
+++ b/package.json
@@ -28,21 +28,19 @@
   },
   "devDependencies": {
     "@types/react-native": "^0.49.5",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "npm-run-all": "^4.1.1",
     "react": "^16.0.0",
-    "react-native": "^0.50.3",
+    "react-native": "^0.56.0",
     "ts-loader": "^3.1.1",
     "typescript": "^2.6.1",
     "webpack": "^2.0.0"
   },
   "dependencies": {
-    "css-length": "^1.0.3",
-    "styled-components": "^2.2.3",
-    "to-style": "^1.3.3"
+    "css-length": "^1.0.3"
   },
   "peerDependencies": {
     "react": "*"
